fixing Firefox icognito font issue

--- a/09_2020_Audi_Banners/A4_Blue_Sept2020_350x350/index.html
+++ b/09_2020_Audi_Banners/A4_Blue_Sept2020_350x350/index.html
@@ -165,7 +165,7 @@ div {
     position: absolute;
     top:20px;
     left:20px;
-    font-family: 'AudiTypeScreen-Normal';
+    font-family: 'AudiTypeScreen-Normal', Helvetica, Arial, sans-serif !important;
     width: 260px;
     height: 320px;
     z-index: 22;
