--- a/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/index.html
+++ b/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/index.html
@@ -34,7 +34,7 @@
     tap-highlight-color: rgba(255, 255, 255, 0);
     vertical-align: baseline;
     font-weight: inherit;
-    font-family: inherit;
+    font-family: 'AudiTypeScreen-Normal', Helvetica, Arial, sans-serif !important;
     font-style: inherit;
     font-size: 100%;
     border: 0 none;
