fixed image links for A6

--- a/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/index.html
+++ b/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/index.html
@@ -145,7 +145,7 @@ div {
     right: 12px;
     width: 46px;
     height: 46px;
-    background-image: url('https://s3-us-west-1.amazonaws.com/rauxa.email.campaign.assets/2020/Audi/AOA36091_September_Banners/A6_Black_Sept2020_350x350/images/close.png');
+    background-image: url('https://master.d2iei9ikt6j4lc.amplifyapp.com/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/images/close.png');
     background-repeat: no-repeat;
     cursor: pointer;
 }
@@ -397,9 +397,9 @@ function overlayClose(){
 
 function preload() {
     images = new Array(
-       'https://s3-us-west-1.amazonaws.com/rauxa.email.campaign.assets/2020/Audi/AOA36091_September_Banners/A6_Black_Sept2020_350x350/images/car_black_A6.png',
-       'https://s3-us-west-1.amazonaws.com/rauxa.email.campaign.assets/2020/Audi/AOA36091_September_Banners/A6_Black_Sept2020_350x350/images/audi_rings_white.png',
-       'https://s3-us-west-1.amazonaws.com/rauxa.email.campaign.assets/2020/Audi/AOA36091_September_Banners/A6_Black_Sept2020_350x350/images/bottom_text_A6.png',
+       'https://master.d2iei9ikt6j4lc.amplifyapp.com/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/images/car_black_A6.png',
+       'https://master.d2iei9ikt6j4lc.amplifyapp.com/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/images/audi_rings_white.png',
+       'https://master.d2iei9ikt6j4lc.amplifyapp.com/09_2020_Audi_Banners/A6_Black_Sept2020_350x350/images/bottom_text_A6.png',
     );
 
     for (var i = 0; i < images.length; i++) {
