--- a/09_2020_Audi_Banners/RPM-214 - Etron SB/970x250/2020_MYCO_T2_LOWER_etronSB/index.html
+++ b/09_2020_Audi_Banners/RPM-214 - Etron SB/970x250/2020_MYCO_T2_LOWER_etronSB/index.html
@@ -29,6 +29,7 @@
                 <div class="logo_text"></div>
             </div>
             <img src='' class='modelLockup'/>
+            <img src='' class='local-copy'/>
             <div class="cta"></div>
             <div class="clickTag"></div>
             <div class="replay"></div>
