--- a/MYCO_AlwaysOn_DAG/300x250/index.html
+++ b/MYCO_AlwaysOn_DAG/300x250/index.html
@@ -25,6 +25,7 @@
                 <div class="logo_text"></div>
             </div>
             <img src='' class='modelLockup'/>
+            <div class="dag"></div>
             <div class="cta"></div>
             <div class="clickTag"></div>
             <div class="replay"></div>
