--- a/12_2020_Audi_Banners/MY21_Core_Models_Lower/300x600/2021_MYCO_T2_LOWER_Q8/index.html
+++ b/12_2020_Audi_Banners/MY21_Core_Models_Lower/300x600/2021_MYCO_T2_LOWER_Q8/index.html
@@ -25,6 +25,7 @@
                 <div class="logo_text"></div>
             </div>
             <img src='' class='modelLockup'/>
+            <div class="dag">DAG 30 character count copy here.</div>
             <div class="cta"></div>
             <div class="clickTag"></div>
             <div class="replay"></div>
