RPM-359 - updating copy as per design

--- a/12_2020_Audi_Banners/Generic_Dec2020_350x350/index.html
+++ b/12_2020_Audi_Banners/Generic_Dec2020_350x350/index.html
@@ -172,7 +172,7 @@ div {
     height: 320px;
     z-index: 22;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 16px;
     overflow: auto;
     position: absolute;
     overflow-y: scroll;
@@ -278,7 +278,7 @@ function instantInit() {
 
 function textConstructor() {
     
-    document.getElementById("overlay_content").innerHTML = "*First lease payment paid by Audi of America up to $800 on a new, unused 2021 Audi Q3, up to $1000 on a new, unused 2021 Audi Q5/Q5 PHEV/SQ5 and up to $1,500 on a new, unused 2021 Audi Q7/SQ7, Q8/SQ8, e-tron and e-tron Sportback. At signing, customer responsible for any remaining first lease payment amount in excess of payment cap. Subject to credit approval by Audi Financial Services.  Offer not valid in Puerto Rico. See your Audi dealer for details or, for general product information, call 1- 800-FOR-AUDI.<br>© 2021 Audi of America, Inc.";
+    document.getElementById("overlay_content").innerHTML = "*First finance or lease payment paid by Audi of America up to $800 on a new, unused 2021 Audi Q3, up to $1,000 on a new, unused 2021 Audi Q5/Q5 PHEV/SQ% and up to $1,500 on a new, unused 2021 Audi Q7/SQ7, Q8/SQ8, e-tron and e-tron Sportback. Customer responsible for any amount in excess of these caps. At signing, customer responsible for any remaining first lease payment amount in excess of payment cap. Subject to credit approval by Audi Financial Services. Not available with standard APR rates. Offer not valid in Puerto Rico. See your Audi dealer for details or, for general product information, call 1-800-FOR-AUDI. © 2021 Audi of America, Inc.";
 
     preload();
     generateScroll();
